[gd_scene load_steps=5 format=2]

[ext_resource path="res://Projectiles/projectile_bad.png" type="Texture" id=1]
[ext_resource path="res://Projectiles/DoomProjectile.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.062, 31.2219 )

[sub_resource type="Animation" id=2]
resource_name = "Moving"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteContainer/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -4.08284, -3.26628 ), Vector2( -2.27473, 6.18262 ), Vector2( 8.31153, -0.972111 ), Vector2( 0.116655, -8.1268 ), Vector2( -3.1788, -1.60396 ), Vector2( 6.45479, 2.60526 ), Vector2( -4.53002, 2.93576 ) ]
}

[node name="DoomProjectile" type="Area2D"]
scale = Vector2( 0.4, 0.4 )
collision_layer = 16
collision_mask = 7
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpriteContainer" type="Node2D" parent="."]
scale = Vector2( 1.53334, 1.53334 )

[node name="Sprite" type="Sprite" parent="SpriteContainer"]
texture = ExtResource( 1 )
hframes = 10
frame = 1

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 3.16162, 3.16942 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Moving"
anims/Moving = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_DoomProjectile_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
